edit channels done and improved auth

--- a/textpigeon/src/App.css
+++ b/textpigeon/src/App.css
@@ -203,7 +203,8 @@
   }
 
   .str-chat-channel-list {
-    height: fit-content;
+    display: flex;
+    /* height: fit-content; */
     margin-bottom: 8px;
     background-color: #005fff;
   }
