--- a/textpigeon/src/App.css
+++ b/textpigeon/src/App.css
@@ -959,10 +959,15 @@
   }
   
   .team-channel-list {
+    max-height: 380px;
+    overflow-y: auto; 
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
   }
+
+  
   
   .team-channel-list__message {
     color: #ffffff;
@@ -1001,7 +1006,7 @@
   }
   
   .channel-preview__wrapper__selected {
-    height: auto;
+    height: 38px;
     display: flex;
     align-items: center;
     background: rgba(0, 0, 0, 0.2);
